# VoIS

./: .env.template  .gitignore  AI_DEV_RULES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  voice_to_cursor_prompt.md
.github/workflows/: ci.yml
ai-changes/: 2026-06-22-change-1.md  2026-06-22-change-10.md  2026-06-22-change-11.md  2026-06-22-change-12.md  2026-06-22-change-13.md  2026-06-22-change-14.md  2026-06-22-change-15.md  2026-06-22-change-16.md  2026-06-22-change-17.md  2026-06-22-change-18.md  2026-06-22-change-19.md  2026-06-22-change-2.md  2026-06-22-change-20.md  2026-06-22-change-21.md  2026-06-22-change-22.md  2026-06-22-change-23.md  2026-06-22-change-24.md  2026-06-22-change-25.md  2026-06-22-change-26.md  2026-06-22-change-27.md  2026-06-22-change-28.md  2026-06-22-change-29.md  2026-06-22-change-3.md  2026-06-22-change-30.md  2026-06-22-change-4.md  2026-06-22-change-5.md  2026-06-22-change-6.md  2026-06-22-change-7.md  2026-06-22-change-8.md  2026-06-22-change-9.md  2026-06-23-change-1.md  2026-06-23-change-2.md  2026-06-23-change-3.md  2026-06-23-change-4.md  2026-06-23-change-5.md
benchmarks/: run_latency.py
data/vocab/: context_chat.json  context_code.json  context_email.json
docs/: ai_working_guide.md  architecture.md  checklist.md  checklist_fix_plan.md  testing.md
installer/: entrypoint.py  voice-to-cursor.iss  voice-to-cursor.spec
installer/hooks/: hook-webrtcvad.py
scripts/: build_installer.py  run_smoke.bat  run_smoke.sh  run_tests.bat  run_tests.sh  smoke_test.py  test_asr.py  test_audio.py  test_hotkey.py  test_injection.py
src/: __init__.py  app.py  config.py  logging_config.py  main.py
src/asr/: __init__.py  base.py  final_transcriber.py  model_manager.py  streaming.py  whisper_provider.py
src/audio/: __init__.py  buffer.py  capture.py  streaming_buffer.py  vad.py
src/benchmarks/: __init__.py  latency.py
src/dictionary/: __init__.py  base.py  bias.py  context_modes.py  corrector.py  learning.py  storage.py  vocab_manager.py
src/hotkey/: __init__.py  base.py  windows.py
src/injection/: __init__.py  base.py  windows.py
src/postprocess/: __init__.py  base.py  formatter.py  llm_client.py
src/ui/: __init__.py  settings_window.py  tray.py  vocab_editor.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_pipeline.py
tests/smoke/: __init__.py  test_smoke.py
tests/unit/: __init__.py  test_app.py  test_asr_bias.py  test_asr_provider.py  test_buffer.py  test_capture.py  test_config.py  test_context_modes.py  test_corrector.py  test_dictionary_storage.py  test_hotkey.py  test_injection.py  test_learning.py  test_logging_config.py  test_main.py  test_model_manager.py  test_ollama_client.py  test_postprocess_factory.py  test_postprocess_formatter.py  test_settings_window.py  test_streaming_buffer.py  test_streaming_transcriber.py  test_tray.py  test_vad.py  test_vocab_editor.py  test_vocab_manager.py  test_warmup.py
tests/unit/asr/: test_final_transcriber.py
tests/unit/benchmarks/: test_latency.py  test_run_latency.py
