[project]
name = "voice-to-cursor"
version = "0.4.0"
description = "Local-first desktop app for AI-powered voice dictation at the cursor."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "soundfile>=0.12",
    "webrtcvad-wheels>=2.0.10",
    "faster-whisper>=1.0",
    "torch>=2.0",
    "huggingface-hub>=0.20",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "httpx>=0.27",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
voice-to-cursor = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D104", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers -m 'not integration and not slow and not requires_model'"
timeout = 60
timeout_method = "thread"
markers = [
    "slow: marks tests as slow",
    "smoke: marks tests requiring real hardware or OS interaction",
    "integration: marks tests as integration tests",
    "requires_model: marks tests that load or download real ASR models",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__main__.py",
    "*/scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
